# aiproj

./: .dockerignore  .gitignore  AGENTS.md  README.md  backend Source Schemas.txt  claudeCodes.txt  compose.yaml  package-lock.json  package.json  proj.docx  stepbystep.docx  text3.txt  vite.config.js  ~$epbystep.docx  ~$proj.docx  ~WRL0151.tmp
backend/: CODEBASE_SUMMARY.md  Dockerfile  Dockerfile.rocm  fix_test.py  pyproject.toml  pytest.ini  requirements.txt
backend/app/: component_contracts.py  component_dependencies.py  component_revisions.py  feature_flags.py  graph_migrations.py  graph_revisions.py  main.py  model_registry.py  runtime.py  schema_contracts.py
backend/app/executors/: builtin_profiles.py  llm.py  llm_ollama.py  llm_openai_compat.py  source.py  tool.py  transform.py
backend/app/routes/: artifacts.py  components.py  env_profiles.py  experiments.py  graphs.py  maintenance.py  models.py  runs.py  snapshots.py
backend/app/runner/: artifacts.py  cache.py  capabilities.py  compile.py  components.py  contracts.py  emit.py  events.py  materialize.py  metadata.py  node_state.py  run.py  schema_diagnostics.py  schema_infer.py  schemas.py  utils.py  validator.py
backend/app/services/: env_installer.py  no_cuda_guard.py
backend/requirements/: README.md  compat.txt  core.txt  dl.txt  finetune.txt  llm.txt  observability.txt  rocm-finetune.txt  testing.txt
backend/requirements/locks/: cpu-dev.lock.txt  rocm-train.lock.txt
backend/scripts/: __init__.py  lock_profiles.py  migrate_canonical_schema.py  no_cuda_guard.py  rocm_device_check.py
backend/tests/: __init__.py
backend/tests/contracts/: test_node_subtype_contracts.py
backend/tests/e2e/: test_component_edit_internals_workflow_gate.py  test_component_migration_regression_gate.py  test_component_nested_schema_golden.py  test_component_outputs.py  test_dsml_golden_pipelines.py  test_env_profile_regression_gate.py  test_schema_first_lifecycle.py
backend/tests/executors/: test_builtin_profiles.py  test_example.py  test_executors.py  test_minimal.py  test_simple.py  test_source.py  test_source_coercion.py  test_tool.py  test_tool_fixed.py  test_tool_followup_patch.py  test_tool_shell_function_capture.py  test_transform.py  test_transform_new.py  test_transform_simple.py  test_transform_v2.py  test_with_imports.py
backend/tests/integration/: test_analysis_outputs_artifacts.py  test_artifact_port_backfill.py  test_binding_commit_guard.py  test_cache_port_contract.py  test_cache_semantic_diagnostics.py  test_cancellation.py  test_capabilities_contract.py  test_component_revisions_store.py  test_component_run_flow.py  (+37 more)
(+269 files in other folders)
