[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "graph-runner"
version = "0.1.0"
description = "AIP Flow backend runtime"
readme = "CODEBASE_SUMMARY.md"
requires-python = ">=3.11,<3.12"
dependencies = [
	"fastapi>=0.115.12,<1.0",
	"uvicorn[standard]>=0.30,<1.0",
	"pydantic>=2.7,<3.0",
	"pydantic-settings>=2.2,<3.0",
	"python-multipart>=0.0.9,<1.0",
	"python-dateutil>=2.8.2,<3.0",
	"orjson>=3.10,<4.0",
	"tenacity>=9,<10",
	"httpx>=0.27,<1.0",
	"jsonschema>=4.23,<5.0",
	"fastmcp>=2.0,<3.0",
	"pandas>=2.1,<3.0",
]

[dependency-groups]
base = [
	"fastapi>=0.115.12,<1.0",
	"uvicorn[standard]>=0.30,<1.0",
	"pydantic>=2.7,<3.0",
	"pydantic-settings>=2.2,<3.0",
	"python-multipart>=0.0.9,<1.0",
	"python-dateutil>=2.8.2,<3.0",
	"orjson>=3.10,<4.0",
	"tenacity>=9,<10",
	"httpx>=0.27,<1.0",
	"jsonschema>=4.23,<5.0",
	"fastmcp>=2.0,<3.0",
	"pandas>=2.1,<3.0",
]
cpu_dev = [
	"fastapi>=0.115.12,<1.0",
	"uvicorn[standard]>=0.30,<1.0",
	"pydantic>=2.7,<3.0",
	"pydantic-settings>=2.2,<3.0",
	"python-multipart>=0.0.9,<1.0",
	"python-dateutil>=2.8.2,<3.0",
	"orjson>=3.10,<4.0",
	"tenacity>=9,<10",
	"httpx>=0.27,<1.0",
	"jsonschema>=4.23,<5.0",
	"fastmcp>=2.0,<3.0",
	"pandas>=2.1,<3.0",
	"polars>=1.8,<2.0",
	"pyarrow>=15,<20",
	"numpy>=1.26,<3.0",
	"scipy>=1.11,<2.0",
	"scikit-learn>=1.5,<2.0",
	"pytest>=8.0,<10.0",
	"pytest-asyncio>=0.23,<2.0",
	"pytest-cov>=5.0,<7.0",
	"pytest-mock>=3.12,<4.0",
	"faker>=20.0,<40.0",
	"hypothesis>=6.131,<7.0",
	"structlog>=24.4,<26.0",
]
rocm_train = [
	"fastapi>=0.115.12,<1.0",
	"uvicorn[standard]>=0.30,<1.0",
	"pydantic>=2.7,<3.0",
	"pydantic-settings>=2.2,<3.0",
	"python-multipart>=0.0.9,<1.0",
	"python-dateutil>=2.8.2,<3.0",
	"orjson>=3.10,<4.0",
	"tenacity>=9,<10",
	"httpx>=0.27,<1.0",
	"jsonschema>=4.23,<5.0",
	"fastmcp>=2.0,<3.0",
	"pandas>=2.1,<3.0",
	"polars>=1.8,<2.0",
	"pyarrow>=15,<20",
	"numpy>=1.26,<3.0",
	"scipy>=1.11,<2.0",
	"scikit-learn>=1.5,<2.0",
	"tiktoken>=0.8,<1.0",
	"rapidfuzz>=3.10,<4.0",
	"transformers>=4.45,<5.0",
	"datasets>=3.0,<4.0",
	"structlog>=24.4,<26.0",
]

[tool.uv]
default-groups = ["cpu_dev"]

[tool.uvicorn]
factory = false
